YAML/service-a.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
spec:
  selector:
    app: bitcoin-price-fetcher
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
