YAML/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "*"
    http:
      paths:
      - path: /service-A
        pathType: Prefix
        backend:
          service:
            name: service-a
            port:
              number: 8080
      - path: /service-B
        pathType: Prefix
        backend:
          service:
            name: service-b
            port:
              number: 8080
